refactoring, update to java21